fix chains count align

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,5 +1,6 @@
 .row.search-row {
   padding: 0 10px 10px 10px;
+  align-items: center;
 }
 
 .row.search-row div {
